kubernetes/workloads/jellyfin/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: pve1
      containers:
      - name: jellyfin
        image: ghcr.io/jellyfin/jellyfin:10.11.2
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: media
        persistentVolumeClaim:
          claimName: media
