kubernetes/workloads/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
  - name: cilium
    namespace: cilium
  hostnames:
  - jellyfin.cecobask.com
  rules:
  - backendRefs:
    - name: jellyfin
      port: 8096
